# bc-thesis

./: .gitignore  .gitmodules  README.md
doc/: fitthesis.cls  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
src/: CMakeLists.txt  SDL2_gfxPrimitives.cpp  SDL2_gfxPrimitives.h  SDLConfig.cpp  SDLConfig.hpp  SDLManager.cpp  SDLManager.hpp  constants.hpp  functions.cpp  functions.hpp  main.cpp  scene.cpp  scene.h  sprite.cpp  sprite.h  types.hpp
src/aiplayeragent/: AIPlayerAgentBase.cpp  AIPlayerAgentBase.hpp  AIPlayerAgentFactory.cpp  AIPlayerAgentFactory.hpp  AstarPredatorAIPlayerAgent.cpp  AstarPredatorAIPlayerAgent.hpp  BFSPredatorAIPlayerAgent.cpp  BFSPredatorAIPlayerAgent.hpp  BlindPredatorAIPlayerAgent.cpp  BlindPredatorAIPlayerAgent.hpp  BlindPreyAIPlayerAgent.cpp  BlindPreyAIPlayerAgent.hpp  GameStateAgentProxy.hpp  IAIPlayerAgent.hpp  IDSPredatorAIPlayerAgent.cpp  IDSPredatorAIPlayerAgent.hpp  LadybugAIPlayerAgent.cpp  LadybugAIPlayerAgent.hpp  MinimaxPreyAIPlayerAgent.cpp  MinimaxPreyAIPlayerAgent.hpp  OneStepLookaheadAIPlayerAgentBase.cpp  OneStepLookaheadAIPlayerAgentBase.hpp  PredatorAIPlayerAgentBase.cpp  PredatorAIPlayerAgentBase.hpp  PreyAIPlayerAgentBase.cpp  PreyAIPlayerAgentBase.hpp  StageGridModel.cpp  StageGridModel.hpp  WallAwareBFSPredatorAIPlayerAgent.cpp  WallAwareBFSPredatorAIPlayerAgent.hpp  WallAwarePredatorAIPlayerAgent.cpp  WallAwarePredatorAIPlayerAgent.hpp  WallAwarePreyAIPlayerAgent.cpp  WallAwarePreyAIPlayerAgent.hpp
src/canvas/: CanvasBase.cpp  CanvasBase.hpp  CanvasFactory.cpp  CanvasFactory.hpp  ICanvas.hpp  SDLCanvas.cpp  SDLCanvas.hpp
src/controller/: ControllerBase.cpp  ControllerBase.hpp  ControllerFactory.cpp  ControllerFactory.hpp  GameSetupController.cpp  GameSetupController.hpp  GeneralControllerBase.cpp  GeneralControllerBase.hpp  IController.hpp  IControllerChild.hpp  IControllerEventSubscriber.hpp  IRootController.hpp  InGameController.cpp  InGameController.hpp  InitialController.cpp  InitialController.hpp  LogoController.cpp  LogoController.hpp  MainMenuController.cpp  MainMenuController.hpp  RootController.cpp  RootController.hpp  StageEditorController.cpp  StageEditorController.hpp  StagePropertiesController.cpp  StagePropertiesController.hpp  StageSelectController.cpp  StageSelectController.hpp
src/core/: Common.hpp  Constants.hpp  Core.cpp  Core.hpp  CoreAction.cpp  CoreAction.hpp  ICore.hpp
src/core/bonuseffect/: BonusEffect.cpp  BonusEffect.hpp  EffectAttributes.cpp  EffectAttributes.hpp
src/core/geometry/: Geometry.hpp
src/core/playerstate/: PlayerState.cpp  PlayerState.hpp
src/core/stagebonuses/: StageBonuses.cpp  StageBonuses.hpp
src/core/stageobstacles/: StageObstacles.cpp  StageObstacles.hpp
src/core/trajectory/: Trajectory.cpp  Trajectory.hpp
src/gamesetupdata/: GameSetupData.hpp
src/math/: Makefile  Math.cpp  Math.hpp  test.cpp
src/paintingproxy/: IPaintingProxy.hpp
src/playerinput/: AIPlayerInput.cpp  AIPlayerInput.hpp  IPlayerInput.hpp  ISysProxyPlayerInput.hpp  ImmobilePlayerInput.cpp  ImmobilePlayerInput.hpp  KeyboardPlayerInput.cpp  KeyboardPlayerInput.hpp  PlayerInputBase.cpp  PlayerInputBase.hpp  PlayerInputFactory.cpp  PlayerInputFactory.hpp  PlayerInputFlags.hpp
src/playerstate/: DefaultPlayerState.cpp  DefaultPlayerState.hpp  IPlayerState.hpp  PlayerStateBase.cpp  PlayerStateBase.hpp  PlayerStateFactory.cpp  PlayerStateFactory.hpp
src/sdlmanager/: SDLManager.cpp  SDLManager.hpp
src/sdlsubscriber/: ISDLSubscriber.hpp  SDLSubscriber.cpp  SDLSubscriber.hpp
src/sprite/: AnimatedSpriteBase.cpp  AnimatedSpriteBase.hpp  BonusHpRecoverySprite.cpp  BonusHpRecoverySprite.hpp  BonusSprite.cpp  BonusSprite.hpp  BoundedSpriteBase.cpp  BoundedSpriteBase.hpp  EditorIconSprite.cpp  EditorIconSprite.hpp  EditorWorkspaceGridSprite.cpp  EditorWorkspaceGridSprite.hpp  HollowRectSprite.cpp  HollowRectSprite.hpp  HorizontalLineSprite.cpp  HorizontalLineSprite.hpp  IAnimatedSprite.hpp  IPositionedSprite.hpp  ISprite.hpp  ImageSprite.cpp  ImageSprite.hpp  LogoSprite.cpp  LogoSprite.hpp  MainMenuItemSprite.cpp  MainMenuItemSprite.hpp  MainMenuSprite.cpp  MainMenuSprite.hpp  MainMenuTitleSprite.cpp  MainMenuTitleSprite.hpp  ObstacleBrushSprite.cpp  ObstacleBrushSprite.hpp  ObstacleEdgesSprite.cpp  ObstacleEdgesSprite.hpp  ObstacleSprite.cpp  ObstacleSprite.hpp  OptionBarSprite.cpp  OptionBarSprite.hpp  OptionButtonSprite.cpp  OptionButtonSprite.hpp  PlayerBrushSprite.cpp  (+19 more)
src/stageeditor/: Common.hpp  StageEditor.cpp  StageEditor.hpp  StageEditorAction.cpp  StageEditorAction.hpp  StageEditorHistory.cpp  StageEditorHistory.hpp  StageEditorObjects.cpp  StageEditorObjects.hpp  StageState.cpp  StageState.hpp  StageViewport.cpp  StageViewport.hpp
src/stageserializer/: IStageSerializer.hpp  StageSerializerBase.cpp  StageSerializerBase.hpp  StageSerializerFactory.cpp  StageSerializerFactory.hpp  YAMLStageSerializer.cpp  YAMLStageSerializer.hpp
src/stageviewport/: StageViewport.cpp  StageViewport.hpp
src/sysevent/: ISysEventPublisher.hpp  ISysEventSubscriber.hpp  SDLSysEventPublisher.cpp  SDLSysEventPublisher.hpp  SysEventPublisherBase.cpp  SysEventPublisherBase.hpp  SysEventPublisherFactory.cpp  SysEventPublisherFactory.hpp  SysEventTypes.hpp
src/sysmanager/: ISysManager.hpp
src/sysproxy/: ISysProxy.hpp  SDLSysProxy.cpp  SDLSysProxy.hpp  SysProxyBase.cpp  SysProxyBase.hpp  SysProxyFactory.cpp  SysProxyFactory.hpp
src/syssubscriber/: ISysSubscriber.hpp  SysTypes.hpp
src/utilities/benchmark/: Benchmark.cpp  Benchmark.hpp
src/utilities/unorderedSetWithIndexes/: UnorderedSetWithIndexes.hpp  test.cpp
stage/: atari_asteroids.yaml  enormous_stage.yaml  enormous_stage_locked.yaml  enormous_stage_together.yaml  grouped.yaml.hidden  my_stage.yaml.hidden  narrowing_corridor.yaml  predator_trick.yaml  shattered_glass.yaml  shattered_glass_locked.yaml  slope_walls.yaml  spaghet.yaml  spaghet_on_table.yaml.hidden  testing.yaml  too_many_players.yaml  wall.yaml
